# imports-resolver

./: .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml  pytest.ini  tox.ini
docs/: module.md  resolver.md  types.md
src/phy_imports_resolver/: __init__.py  __main__.py  _extractor.py  _resolve_import.py  _resolver.py  _types.py  cli.py  core.py  extractor.py  phy_core.py  resolver.py  types.py
tests/: _common.py  imports_parser.py  retrieve_pypi_repo.py  retrieve_top_pypi_repo.py  test_extract.py  test_extractor.py  test_resolve.py  test_tokenize.py
