[project]
name = "phy-imports-resolver"
version = "0.1.0"
description = "Resolve imports of a python file or module, exclude site packages & builtin modules."
authors = [
    {name = "Alfred DU",email = "ihearmywords@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
]


[project.scripts]
phy = 'phy_imports_resolver.__main__:phy'


[tool.poetry]
packages = [{include = "phy_imports_resolver", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
