[project]
name = "phy-imports-resolver"
version = "0.1.0"
description = "Resolve imports of a python file or module, exclude site packages & builtin modules."
authors = [
    {name = "Alfred DU",email = "ihearmywords@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
]


[project.scripts]
phy = 'phy_imports_resolver.__main__:phy'


[tool.poetry]
packages = [{include = "phy_imports_resolver", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
gitpython = "^3.1.44"
pytest = "^8.3.5"
pytest-dependency = "^0.6.0"
requests = "^2.32.3"

[tool.pytest.ini_options]
norecursedirs = ["tmp", ]


[tool.pylint]
ignore = ["tmp", ]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "use-symbolic-message-instead",
    "use-dict-literal",
    "unnecessary-pass",
    "trailing-whitespace",
    "invalid-name",
    "consider-using-f-string",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-nested-blocks",
    "too-few-public-methods",
    "line-too-long",
]
