[project]
name = "phy-imports-resolver"
version = "0.1.0"
description = "Resolve imports of a python file or module, exclude site packages & builtin modules."
authors = [
    {name = "Alfred DU",email = "ihearmywords@hotmail.com"}
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10, <4"
dependencies = [
    "click>=8.1.8",
]

# to be collected by `phy_cli` meta command
[project.entry-points."phy_sub_commands"]
cli_app = "phy_imports_resolver.cli:cli_app"


[tool.poetry]
packages = [{include = "phy_imports_resolver", from = "src"}]

[tool.poetry.scripts]
phy-resolve-imports = "phy_imports_resolver.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
gitpython = "^3.1.44"
pylint = "^4.0.2"
pytest = "^8.3.5"
pytest-dependency = "^0.6.0"
requests = "^2.32.3"
